<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo_trans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/hajji_receiver"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="30dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/txtReceived"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnStartReceiving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_border"
            android:fontFamily="sans-serif-light"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:shadowColor="#2aaa83"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/start_receiving"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnStopReceiving"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/buttonshape_red"
            android:fontFamily="sans-serif-light"
            android:paddingEnd="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingStart="20dp"
            android:shadowColor="#2aaa83"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:text="@string/stop_receiving"
            android:textColor="#FFFFFF"
            android:textSize="15sp"
            android:visibility="gone" />

    </LinearLayout>


</RelativeLayout>