<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".broadcast.ui.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:src="@drawable/logo_trans" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:text="@string/haji_broadcast"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_margin="30dp"
            android:background="@android:color/white"/>

        <TextView
            android:id="@+id/txtBroadcastID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Next ID: 2341234"
            android:fontFamily="sans-serif-light"
            android:textColor="@android:color/white"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnSendData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_border"
            android:shadowColor="#2aaa83"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="@string/send_data"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-light"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnStopData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/buttonshape_red"
            android:shadowColor="#2aaa83"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="5"
            android:paddingLeft="20dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:paddingRight="20dp"
            android:text="@string/stop_data"
            android:visibility="gone"
            android:textColor="#FFFFFF"
            android:fontFamily="sans-serif-light"
            android:textSize="15sp" />

    </LinearLayout>


</RelativeLayout>